[tool.poetry]
name = "test-isfront"
version = "0.1.0"
description = ""
authors = ["Timofey Volkov <volkow.timofey@ya.ru>"]
readme = "README.md"
packages = [{include = "test_isfront"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
